--- a/Snackapp/app/src/main/res/layout/activity_main.xml
+++ b/Snackapp/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
                 android:layout_height="150dp"
                 android:id="@+id/imageView"
                 android:src="@mipmap/header"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:onClick="AllLocations" />
 
             <Button
                 android:layout_width="fill_parent"
